--- a/soundscape_project/requirements.txt
+++ b/soundscape_project/requirements.txt
@@ -1,2 +1,9 @@
-argparse==1.2.1
+Django==1.6
+dj-database-url==0.2.2
+dj-static==0.0.5
+gunicorn==18.0
+psycopg2==2.5.1
+static==0.4
 wsgiref==0.1.2
+simplejson==3.6.2
+Pillow==2.3.0
